Thanks Game Night Page

--- a/simple.css
+++ b/simple.css
@@ -619,3 +619,18 @@ pre code {
   font-style: bold;
 }
 
+
+.spoiler{
+  background-color: gray;
+  color: transparent;
+  user-select: none;
+}
+
+.spoiler:hover{
+  background-color: inherit;
+  color: inherit;
+}
+
+.indent {
+  text-indent: 30px;
+}
